--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-data
+data/codebook.csv
+data/Copy of Residential Consumer Survey Response.xlsx
+data/Residential Consumer Survey Response (copy).xlsx
+data/Residential Consumer Survey Response.xlsx
