--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-data/codebook.csv
-data/Copy of Residential Consumer Survey Response.xlsx
-data/Residential Consumer Survey Response (copy).xlsx
-data/Residential Consumer Survey Response.xlsx
+notes/_notes.docx
+notes/_notes.txt
+notes/Notes for Terwase.docx
